--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer mt-auto py-3 bg-dark">
+    <div class="container">
+      <span class="text-white ">Copyright © 2021 Afri-Agraria. Todos los derechos reservados</span>
+    </div>
+  </footer>
