--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,11 +9,11 @@
     </div>
  
   <div class="imagenes">
-    <div [@entrada-derecha]="isOpen2 ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()" class="derecha">
+    <div [@fadeIn]="isOpen2 ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()" class="derecha">
         <img src="../../../assets/images/afri-agraria.png" width="90%" alt="">
     </div>
   
-    <div [@entrada-derecha2]="isOpen2 ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()" class="derecha2">
+    <div [@fadeIn2]="isOpen2 ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()" class="derecha2">
         <img src="../../../assets/images/afri-agraria2.png" width="90%" alt="">
     </div>
   </div>
