--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav d-flex w-100 justify-content-center">
-                <li class="nav-item ms-auto">
+                <li class="nav-item ms-md-auto">
                     <a class="nav-link active " aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="#descubre">Descubre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" routerLink="/shop">Shop</a>
                 </li>
             </ul>
         </div>
