--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row producto vh-100 justify-content-center align-items-center">
-        <div class="col-md-6 text-center">
+        <div @fadeIn class="col-md-6 text-center">
          <img src="../../../assets/productos/baobab1.jpg" width="80%" alt="">
         </div>
-        <div class="col-md-6   text-white"  >
+        <div @fadeIn class="col-md-6   text-white"  >
             <div class="card border-primary  mx-auto  mb-3 p-2" >
                 <span class=" display-5">21,00 € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;    Total:{{21*cantidad}} €</span>
                
