--- a/src/app/components/iconos/iconos.component.html
+++ b/src/app/components/iconos/iconos.component.html
@@ -1,1 +1,7 @@
-<p>iconos works!</p>
+<div [@fadeInOut]="isOpen ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()"  class="iconos container p-5 justify-content-center">
+    <img src="../../../assets/iconos/vegan.png" width="50%" alt="">
+    <img src="../../../assets/iconos/005-bio.png" width="50%" alt="">
+    <img src="../../../assets/iconos/001-natural.png" width="50%" alt="">
+
+
+</div>
