--- a/src/app/components/cartel/cartel.component.html
+++ b/src/app/components/cartel/cartel.component.html
@@ -1,6 +1,7 @@
-<div class="cartel">
-    <div class="texto d-flex h-100 mx-auto justify-content-center align-items-center">
-        <div class="jumbotron col-md-8 container-fluid py-5">
+<div class="cartel ">
+    <br><br>
+    <div class="texto d-flex h-100 mx-auto justify-content-center align-items-center ">
+        <div [@entrada-izq]="isOpen ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()"  class="jumbotron col-md-8 container-fluid py-5">
             <p class=" mx-auto display-5 fw-bold text-white">Las ideas ecológicas y la sustentabilidad de la siembra deben
                 asegurar que cosecharemos un futuro fructífero y consciente.</p>
              <p class="text-white mt-5">Sivaldo Filho</p>   
