--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav d-flex w-100 justify-content-center">
-                <li class="nav-item ms-md-auto">
+                <li class="nav-item ms-lg-auto">
                     <a class="nav-link active " aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
