--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -1,15 +1,37 @@
-
 <div id="descubre" class="container py-4">
   <br><br>
-    <div class="p-5 mb-4 bg-light rounded-3">
-        <div class="jumbotron  container-fluid py-5">
-          <h1 class="display-5 fw-bold">Descubra nuestros productos</h1>
-          <p class="col-md-10 fs-5">AFRI AGRARIA representa el comercio de materias primas naturales 
-              a nivel mundial. Somos proveedores de materia prima para la industria cosmética.
-               Nuestros principales productos son Moringa Organic, Baobab e Hibiscus.
-                Las máximas exigencias de nuestros clientes en calidad y precio son nuestra prioridad.</p>
-          <button class="btn btn-primary btn-lg" type="button">Example button</button>
+  <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="jumbotron  container-fluid py-5">
+      <h1 class="display-5 fw-bold">Descubra nuestros productos</h1>
+      <p class="col-md-10 fs-5">AFRI AGRARIA representa el comercio de materias primas naturales
+        a nivel mundial. Somos proveedores de materia prima para la industria cosmética.
+        Nuestros principales productos son Moringa Organic, Baobab e Hibiscus.
+        Las máximas exigencias de nuestros clientes en calidad y precio son nuestra prioridad.</p>
+      <div class="imagenes d-flex flex-wrap justify-content-around p-4">
+
+        <div class="card">
+          <img src="../../../assets/productos/anacardos.jpg" width="200px" alt="">
+          <h5 class="card-title">Anacardos</h5>
+        </div>
+        <div class="card">
+          <img src="../../../assets/productos/baobab2.jpg" width="200px" alt="">
+          <h5 class="card-title">Beobab</h5>
+
+        </div>
+        <div class="card">
+          <img src="../../../assets/productos/hibisco.jpg" width="200px" alt="">
+          <h5 class="card-title">Hibisco</h5>
+
+        </div>
+        <div class="card">
+          <img src="../../../assets/productos/moringa.jpg" width="200px" alt="">
+          <h5 class="card-title">Moringa</h5>
+
         </div>
       </div>
-    
+
+      <a class="btn btn-primary btn-lg" routerLink="productos">Ver mas</a>
     </div>
+  </div>
+
+</div>
