--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -17,7 +17,7 @@
                     
                     </div>
                     <div class="">
-                      <button  class="btn btn-primary w-100 mb-3">Comprar</button>
+                      <a  class="btn btn-primary w-100 mb-3" routerLink="/formulario">Comprar</a>
                     </div>
                   </div>
                 <div class="card-body text-primary">
