--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -8,13 +8,13 @@
                 <div class="row">
                     <div class="col">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <label for="exampleFormControlInput1" class="form-label">Apellido</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                           </div>
                     </div>
                     <div class="col">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                            <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                           </div>
                     </div>
