--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -13,11 +13,11 @@
           <img src="../../../assets/productos/anacardos.jpg" width="200px" alt="">
           <h5 class="card-title">Anacardos</h5>
         </div>
-        <div class="card">
+        <a class="card" routerLink="/descripcion">
           <img src="../../../assets/productos/baobab2.jpg" width="200px" alt="">
           <h5 class="card-title">Beobab</h5>
 
-        </div>
+        </a>
         <div class="card">
           <img src="../../../assets/productos/hibisco.jpg" width="200px" alt="">
           <h5 class="card-title">Hibisco</h5>
