--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -42,13 +42,14 @@
 
     <div class="row mt-5">
         <div class="col-md-6">
-            <img src="../../../assets/productos/baobab1.jpg" width="100%" alt="">
+            <img src="../../../assets/productos/baobab3.jpg" width="100%" alt="">
         </div>
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Baobab</h2>
             <p>Valorado durante siglos en África por sus propiedades hidratantes, el aceite de baobab es un ingrediente
                 ideal para su uso en productos para el cuidado de la piel y el cabello. Rápida absorción, no obstruye
                 los poros y es muy hidratante y calmante.</p>
+                <a class="btn btn-primary btn-lg" routerLink="/descripcion">Ver mas</a>
         </div>
     </div>
     <hr />
