--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="row producto vh-100 justify-content-center align-items-center">
         <div @fadeIn class="col-md-6 text-center">
-         <img src="../../../assets/productos/baobab1.jpg" width="80%" alt="">
+         <img src="../../../assets/productos/baobab3.jpg" width="80%" alt="">
+         <div class="">
+          <a  class="btn btn-primary w-100 mb-3" routerLink="/descripcion">Detalles Producto</a>
+        </div>
         </div>
         <div @fadeIn class="col-md-6   text-white"  >
             <div class="card border-primary  mx-auto  mb-3 p-2" >
