--- a/src/app/pages/descripcion/descripcion.component.html
+++ b/src/app/pages/descripcion/descripcion.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-   <div class="principal">
+    <br><br>
+   <div class="principal mt-5">
        <div class="imagen">
 <img src="../../../assets/productos/baobab3.jpg" width="50%" alt="">
        </div>
@@ -40,7 +41,7 @@ largo y puntas del cabello, sin enjuagar después.
 <div class="edad d-flex  align-items-center justify-content-end me-3">
     <div class="texto-edad text-white">
         <p class="fs-2 fw-bold">
-            El aceite de Baobab se puede usar directamente en la cara, porque es un aceite fino que se
+            El aceite de Baobab se puede usar directamente en la cara, porque es un aceite fino que es
 rápidamente absorbido. Ayudará a dejar la piel visiblemente más hidratada y bonita.
         </p>
     </div>
