--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav d-flex w-100 justify-content-center">
-                <li class="nav-item ms-lg-auto">
+                <li class="nav-item ms-3">
                     <a class="nav-link active " aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
@@ -21,6 +21,11 @@
                     <a class="nav-link" routerLink="/shop">Shop</a>
                 </li>
             </ul>
+           
         </div>
+        <button routerLink="cart" class="btn btn-primary">
+            <i style="font-size: 30px;" class="bi-cart"></i>
+            <div style="font-size: 10px;" class="badge bg-danger">{{'totalItem'}}</div>
+        </button>
     </div>
 </nav>
