--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -11,7 +11,7 @@
     <div @fadeIn class="col-md-6 text-white">
       <div class="card border-primary mx-auto mb-3 p-2">
         <span class="display-5">21,00 € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Total:{{
-            21 * cantidad
+            21 * item.cantidad
           }}
           €</span
         >
@@ -19,11 +19,11 @@
         <div class="row g-3">
           <div class="text-white mt-4">
             <span class="me-2">Cantidad</span>
-            <button class="btn btn-primary" (click)="cantidad = cantidad + 1">
+            <button class="btn btn-primary" (click)="item.cantidad=item.cantidad+1">
               +
             </button>
-            <span class="me-2 ms-2">{{ cantidad }}</span>
-            <button class="btn btn-primary" (click)="cantidad = cantidad - 1">
+            <span class="me-2 ms-2">{{item.cantidad }}   </span>
+            <button class="btn btn-primary" (click)="item.cantidad=item.cantidad-1">
               -
             </button>
           </div>
@@ -34,12 +34,9 @@
           </div>
         </div>
         <div class="card-body text-primary">
-          <h5 class="card-title">BAOBAB</h5>
+          <h5 class="card-title">{{item.nombre}}</h5>
           <p class="card-text">
-            Valorado durante siglos en África por sus propiedades hidratantes,
-            el aceite de baobab es un ingrediente ideal para su uso en productos
-            para el cuidado de la piel y el cabello. Rápida absorción, no
-            obstruye los poros y es muy hidratante y calmante.
+          {{item.descripcion}}
           </p>
         </div>
       </div>
