--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -10,8 +10,8 @@
     </div>
     <div @fadeIn class="col-md-6 text-white">
       <div class="card border-primary mx-auto mb-3 p-2">
-        <span class="display-5">21,00 € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Total:{{
-            21 * item.cantidad
+        <span class="display-5">{{item.precio}} € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Total:{{
+            item.precio * item.cantidad
           }}
           €</span
         >
