--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,40 +1,38 @@
 <ng-container *ngIf="products.length !=0">
-    <div class="container">
-        <div class="card-table">
+    <div class="container mt-4">
+        <br><br>
+        <div class="card-table ">
             <div class="cart-product">
                 <table class="table table-responsive">
                     <thead>
                         <tr>
-                            <th>Sr.No</th>
                             <th>Product Name</th>
                             <th>Product Image</th>
-                            <th>Description</th>
                             <th>Price</th>
-                            <th>Quantity</th>
+                            <th>Qty</th>
                             <th>Total</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let item of products; let i = index">
-                            <td>{{i+1}}</td>
-                            <td>{{item.title}}</td>
+                           
+                            <td>{{item.nombre}}</td>
                             <td><img style="width: 120px;" src="{{item.imagen}}" alt=""></td>
-                            <td style="width: 25%;">{{item.nombre}}</td>
                             <th style="width: 12%;">{{item.precio}}</th>
-                            <td style="width: 12%;">{{item.cantidad}}</td>
-                            <td style="width: 12%;">{{item.total}}</td>
+                            <td style="width: 5%;">{{item.cantidad}}</td>
+                            <td style="width: 5%;">{{item.cantidad*item.precio}}</td>
                             <td>
                                 <button (click)="removeItem(item)" class="btn btn-danger"><i class="bi-trash"></i></button>
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="4"></td>
                             <td><button (click)="emptycart()" class="btn btn-danger">Vaciar Carrito</button></td>
                             <td><button routerLink="/products" class="btn btn-primary">Continuar Con la compra</button></td>
                             <td><button class="btn btn-success">Sair</button></td>
-                            <td><strong>Grand Total : ${{grandTotal}}</strong></td>
+                            <td class="fs-2"><strong> Total : ${{grandTotal}}</strong></td>
                         </tr>
+                        <button class="pagar btn btn-primary" routerLink="/formulario">Pagar</button>
                     </tbody>
                 </table>
             </div>
@@ -44,7 +42,10 @@
 
 
 <ng-container *ngIf="products.length ==0">
-    <div class="container">
+    <div class="container mt-4">
+        <br>             <br>
+        <br>
+
         <div class="card">
             <h5 class="card-title">Mi Carrito</h5>
         </div>
