--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -11,7 +11,7 @@
     <div @fadeIn class="col-md-6 text-white">
       <div class="card border-primary mx-auto mb-3 p-2">
         <span class="display-5">{{item.precio}} € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Total:{{
-            item.precio * item.cantidad
+            item.precio * item.cantidad | number:'1.2'
           }}
           €</span
         >
