--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -49,7 +49,7 @@
             <p>Valorado durante siglos en África por sus propiedades hidratantes, el aceite de baobab es un ingrediente
                 ideal para su uso en productos para el cuidado de la piel y el cabello. Rápida absorción, no obstruye
                 los poros y es muy hidratante y calmante.</p>
-                <a class="btn btn-primary btn-lg" routerLink="/descripcion">Ver mas</a>
+                <a class="btn btn-primary btn-lg" routerLink="/baobab-desc">Ver mas</a>
         </div>
     </div>
     <hr />
