--- a/src/app/pages/descripcion/anacardos-desc.component.html
+++ b/src/app/pages/descripcion/anacardos-desc.component.html
@@ -21,10 +21,10 @@
 
 
   <div class="row">
-    <div class="col-md-6 my-auto">
+    <div class="col-lg-6 order-md-2 my-auto">
 <img src="../../../assets/productos/anacardos2.jpg" width="100%" alt="">
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6 order-md-1">
     <h2 class="text-white">Beneficios</h2>
     <div class="fs-5 fw-bold text-white p-3">
       <p>
