agregado anacardos-desc3

--- a/src/app/pages/descripcion/baobab-desc.component.html
+++ b/src/app/pages/descripcion/baobab-desc.component.html
@@ -1,10 +1,11 @@
 <div class="container">
     <br><br>
-   <div class="principal mt-5">
-       <div class="imagen">
-<img src="../../../assets/productos/baobab3.jpg" width="50%" alt="">
+    
+         <div class="row principal mt-5">
+       <div class="col-lg-6 imagen">
+<img src="../../../assets/productos/baobab3.jpg" width="100%" alt="">
        </div>
-       <div class="descripcion text-white">
+       <div class="col-lg-6 descripcion text-white">
 <p>Para nadie es nuevo que el aceite de Baobab con sus únicas particularidades es un gran aliado en la
     industria del cuidado de la belleza. Entre ellos, el Aceite de Baobab se ha destacado cada vez más por ofrecer beneficios, tanto
     para cabello, piel y uñas, demostrando ser un producto versátil y valioso.
@@ -19,8 +20,12 @@
     Estos son los beneficios del aceite de Baobab y cómo usarlo para cada propósito. Este rico aceite ofrece beneficios
     tanto para el cabello como para la piel cuando se aplica sobre el cabello y cuando se usa sobre la piel, los labios y las uñas. los secretos mienten
     en la forma de utilización, que puede variar según cada objetivo.</p>
-       </div>
-   </div>
+          <button class="btn btn-primary w-100" (click)="regresar()">Regresar</button>
+
+</div>
+    </div>
+
+  
 
   
 </div>
