--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -3,7 +3,7 @@
     <div @fadeIn class="col-md-6 text-center">
       <img src="{{item.imagen}}" width="80%" alt="" />
       <div class="">
-        <a class="btn btn-primary w-100 mb-3" routerLink="/descripcion"
+        <a class="btn btn-primary w-100 mb-3" routerLink="/{{item.link}}"
           >Detalles Producto</a
         >
       </div>
