--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -21,6 +21,8 @@
             <p>Uno de los beneficios de los anacardos es que ya tiene una dosis significativa de hierro, importante para
                 estimular el sistema inmunológico. El mineral es importante para prevenir la anemia y la falta de
                 energía. Hay varios beneficios de los anacardos, incluida la salud ocular.</p>
+                <a class="btn btn-primary btn-lg" routerLink="/anacardos-desc">Ver mas</a>
+
         </div>
     </div>
     <hr />
