--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
         </div>
         <button routerLink="cart" class="btn btn-primary">
             <i style="font-size: 30px;" class="bi-cart"></i>
-            <div style="font-size: 10px;" class="badge bg-danger">{{'totalItem'}}</div>
+            <div style="font-size: 10px;" class="badge bg-danger">{{totalItem}}</div>
         </button>
     </div>
 </nav> 
