--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -2,11 +2,8 @@
   <br><br>
   <div class="p-5 mb-4 bg-light rounded-3">
     <div class="jumbotron  container-fluid py-5">
-      <h1 class="display-5 fw-bold">Descubra nuestros productos</h1>
-      <p class="col-md-10 fs-5">AFRI AGRARIA representa el comercio de materias primas naturales
-        a nivel mundial. Somos proveedores de materia prima para la industria cosmética.
-        Nuestros principales productos son Moringa Organic, Baobab e Hibiscus.
-        Las máximas exigencias de nuestros clientes en calidad y precio son nuestra prioridad.</p>
+      <h1 class="display-5 fw-bold">{{"HOME.DESC" | translate}}</h1>
+      <p class="col-md-10 fs-5">{{"HOME.AFRI" | translate}}</p>
       <div class="imagenes d-flex flex-wrap justify-content-around p-4">
 
         <div class="card">
