--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,14 +1,10 @@
 <div class="container text-white mt-5">
     <div class="cabecera d-flex flex-column justify-content-center mx-auto ">
         <div class="tittulo mt-5"><br><br>
-            <h2>Nuestros Productos</h2>
+            <h2>{{"PRODUCTOS.NUESTROS" | translate}}</h2>
         </div>
         <div class="texto">
-            <p>Nuestras materias primas provienen de agricultura orgánica y sustentable,
-                asegurando la calidad de excelencia en sus productos. Nuestras materias primas
-                provienen de agricultura orgánica y sustentable, asegurando la calidad de excelencia
-                en sus productos. Su potencial va más allá de su alto valor nutricional y terapéutico
-                y alcanza a varias industrias, incluida la cosmética.</p>
+            <p>{{"NUESTRAS" | translate}}</p>
         </div>
     </div>
     <hr>
@@ -18,10 +14,8 @@
         </div>
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Anacardos</h2>
-            <p>Uno de los beneficios de los anacardos es que ya tiene una dosis significativa de hierro, importante para
-                estimular el sistema inmunológico. El mineral es importante para prevenir la anemia y la falta de
-                energía. Hay varios beneficios de los anacardos, incluida la salud ocular.</p>
-                <a class="btn btn-primary btn-lg" routerLink="/anacardos-desc">Ver mas</a>
+            <p>{{"PRODUCTOS.ANACARDOS" | translate}}</p>
+                <a class="btn btn-primary btn-lg" routerLink="/anacardos-desc">{{"PRODUCTOS.VERMAS" | translate}}</a>
 
         </div>
     </div>
@@ -30,10 +24,7 @@
     <div class="row mt-5">
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Hibisco</h2>
-            <p>Beneficios del aceite de hibisco El principal beneficio del aceite de hibisco está relacionado con la
-                hidratación y salud del cabello, pero además también es bueno para la piel y ayuda a reducir las
-                manchas, ya sean del rostro o incluso marcas como estrías y celulitis Por eso este aceite es un
-                auténtico fenómeno.</p>
+            <p>{{"PRODUCTOS.HIBISCO" | translate}}</p>
         </div>
         <div class="col-md-6">
             <img src="../../../assets/productos/hibisco.jpg" width="100%" alt="">
@@ -48,10 +39,8 @@
         </div>
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Baobab</h2>
-            <p>Valorado durante siglos en África por sus propiedades hidratantes, el aceite de baobab es un ingrediente
-                ideal para su uso en productos para el cuidado de la piel y el cabello. Rápida absorción, no obstruye
-                los poros y es muy hidratante y calmante.</p>
-                <a class="btn btn-primary btn-lg" routerLink="/baobab-desc">Ver mas</a>
+            <p>{{"PRODUCTOS.BAOBAB" | translate}}</p>
+                <a class="btn btn-primary btn-lg" routerLink="/baobab-desc">{{"PRODUCTOS.VERMAS" | translate}}</a>
         </div>
     </div>
     <hr />
@@ -62,11 +51,7 @@
         </div>
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Moringa</h2>
-            <p>Obtenido por prensado en frío de las semillas de la planta, el aceite de Moringa es la última apuesta en
-                la industria cosmética.
-                Con propiedades hidratantes y antioxidantes, también tiene otras propiedades nutricionales como su alto
-                contenido en proteínas, vitaminas A y C, y altas concentraciones de sales minerales y ácidos grasos
-                esenciales para la salud de la piel, las uñas y el cabello.</p>
+            <p>{{"PRODUCTOS.MORINGA" | translate}}}</p>
         </div>
     </div>
 </div>
