--- a/src/app/components/cartel/cartel.component.html
+++ b/src/app/components/cartel/cartel.component.html
@@ -2,10 +2,9 @@
     <br><br>
     <div class="texto d-flex h-100 mx-auto justify-content-center align-items-center ">
         <div [@entrada-izq]="isOpen ? 'in' : 'out'" (scroll-in)="activate()" (scroll-out)="desactivate()"  class="jumbotron col-md-8 container-fluid py-5">
-            <p class=" mx-auto display-5 fw-bold text-white">Las ideas ecológicas y la sustentabilidad de la siembra deben
-                asegurar que cosecharemos un futuro fructífero y consciente.</p>
+            <p class=" mx-auto display-5 fw-bold text-white">{{"HOME.LASI" | translate}}</p>
              <p class="text-white mt-5">Sivaldo Filho</p>   
-            <button class="btn btn-primary btn-lg" type="button">Example button</button>
+            <button class="btn btn-primary btn-lg" type="button">Start</button>
         </div>
     </div>
 </div>
