--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
       <br>
         <h1>AFRIAGRARIA S.L.</h1>
         <br>
-      <h2>Competencia en productos agrícolas africanos</h2>
-      <p>¡Sostenibilidad económica, social y ecológica!</p>
+      <h2>{{"HOME.COMP" | translate}}</h2>
+      <p>{{"HOME.SOST" | translate}}</p>
         <button class="btn btn-primary" >Start</button>
 
     </div>
