--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -10,16 +10,16 @@
     </div>
     <div @fadeIn class="col-md-6 text-white">
       <div class="card border-primary mx-auto mb-3 p-2">
-        <span class="display-5">{{item.precio}} € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Total:{{
-            item.precio * item.cantidad | number:'1.2'
+        <span class="display-5">{{item.precio}} € &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; Qty:{{
+           item.cantidad 
           }}
-          €</span
+          </span
         >
 
         <div class="row g-3">
          
           <div class="">
-            <button class="btn btn-primary" (click)="addtocart(item)">
+            <button class="btn btn-primary" (click)="addtocart(item)" (click)="item.cantidad=item.cantidad+1">
               {{"SHOP.AGRE" | translate}}
             </button>
           </div>
