--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,7 @@
     <div class=" container-fluid">
         <img src="../../../assets/images/afri-agraria2.png" alt="" width="100" height="70"
             class="d-inline-block align-text-top">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+       
         <div  class="collapse navbar-collapse " id="navbarNav">
             <ul   class="navbar-nav d-flex w-100 justify-content-center ">
                 <li class="nav-item ms-3">
@@ -15,17 +12,12 @@
                     <a class="nav-link" href="#">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#descubre">Descubre</a>
+                    <a  data-toggle="dropdown"   class="nav-link" href="#descubre">Descubre</a>
                 </li>
-                <li class="nav-item">
-                    <a  data-toggle="dropdown" class="nav-link" routerLink="/shop">Shop</a>
+                <li class="nav-item ">
+                    <a  data-toggle="dropdown" data-bs-target="#navbarNav" data-bs-toggle="collapse"   class="nav-link" routerLink="/shop">Shop</a>
                 </li>
-                <li>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Profile
-                    
-                </button>          
-                  </li>
+               
             </ul>
            
         </div>
@@ -44,5 +36,9 @@
             <i style="font-size: 30px;" class="bi-cart"></i>
             <div style="font-size: 10px;" class="badge bg-danger">{{totalItem}}</div>
         </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     </div>
 </nav> 
